--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
 	
-	<version>0.0.2-SNAPSHOT</version> 
+	<version>0.0.2</version> 
 	
 	<name>maven-web-application</name>
 
@@ -95,13 +95,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://18.237.198.8:8081/repository/teslarepo-releases/</url>
+	      <url>http://3.135.212.196:8081/repository/nnreleases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://18.237.198.8:8081/repository/tesla-snapshot/</url>
+	      <url>http://3.135.212.196:8081/repository/nnsnapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
